--- a/TDHK/main.css
+++ b/TDHK/main.css
@@ -1,5 +1,3 @@
-
-
 .theme-light {
 	
     --primary1-colour: rgba(45,45,45,0.5);
@@ -82,7 +80,7 @@
 
 	#app-mount .numberBadge-2s8kKX {background-color: var(--primary1-colour)!important}
 
-	#app-mount .pill-31IEus .item-2hkk8m {background-color: var(--secondary1-colour)}
+	#app-mount .pill-31IEus .item-2hkk8m {background-color: white}
 	#app-mount #bd-pub-li .wrapper-25eVIn {background-color: var(--secondary1-colour)}
 
 	.folder .wrapper-1BJsBx {background-color: var(--secondary2-colour)!important; transition: background-color .15s ease-out;}
@@ -730,18 +728,3 @@
 .theme-light .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
     border-top-color: var(--secondary3-colour);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
