--- a/TDHK/main.css
+++ b/TDHK/main.css
@@ -190,7 +190,7 @@
 
 				/*VC Info*/
 				#app-mount .panels-j1Uci_ {background-color: transparent;}
-				#app-mount .container-1giJp5 {background-image: var(--transparency-2);}
+				#app-mount .container-1giJp5 {background-image: transparent;}
 				#app-mount .button-14-BFJ[aria-label="Disconnect"] {background-color: var(--primary3-colour);}
 				#app-mount .button-14-BFJ[aria-label="Disconnect"]:hover {background-color: var(--primary3-colour);}
 
