--- a/TDHK/main.css
+++ b/TDHK/main.css
@@ -813,7 +813,7 @@
 .guildsError-b7zR5H:hover {
 	border-color: var(--guildsError-color);
 	background-color: var(--guildsError-color);
-}1
+}
 
 
 
