--- a/TDHK/main.css
+++ b/TDHK/main.css
@@ -33,6 +33,8 @@
 	--spoiler-uncovered: rgba(45,45,45,0.4);
 	--guildsError-color: rgba(10,10,10,0.15);
 	--context-color: rgba(0, 0, 0, 0.4);
+	--contextbtnhover: rgba(0,0,0,0.15);
+	--contextbtnclick: rgba(0,0,0,0.25);
 }
 
 .theme-light {
@@ -274,12 +276,19 @@
 		#app-mount .newMessagesBar-mujexs:active {background-color: rgba(255,100,100, .5);}
 
 		#app-mount .buttons-cl5qTG .wrapper-2aW0bm {background-color: var(--secondary1-colour);}
-		#app-mount .message-2qnXI6 {
-			padding-top: 0;
-			padding-bottom: 0;
+		
+		.message-2qnXI6.selected-2P5D_Z,
+		.mouse-mode.full-motion .message-2qnXI6:hover {
+			background-color: transparent;
 		}
-		#app-mount .message-2qnXI6:hover { background-color: transparent; }
-
+		.message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z,
+		.mouse-mode.full-motion .mentioned-xhSam7:hover {
+			background-color: var(--background-mentioned-hover);
+		}
+		.message-2qnXI6.localBot-GrCgVt.selected-2P5D_Z,
+		.mouse-mode.full-motion .localBot-GrCgVt:hover {
+			background-color: rgba(114, 137, 218, 0.1);
+		}
 
 		#app-mount .contents-2mQqc9 img {margin-top: 0px;}
 		#app-mount .contents-2mQqc9,
@@ -289,6 +298,10 @@
 		}
 		#app-mount .header-23xsNx{
 			padding-top: 5px;
+		}
+		#app-mount .message-2qnXI6 {
+			padding-top: 0;
+			padding-bottom: 0;
 		}
 
 
@@ -338,7 +351,11 @@
 		box-shadow: 0 0 1px 2px var(--secondary2-colour);
 	}
 	.colorDefault-2K3EoJ.focused-3afm-j {
-		background-color: var(--secondary2-colour);
+		background-color: var(--contextbtnhover);
+		color: #fff;
+	}
+	.colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O) {
+		background-color: var(--contextbtnclick);
 		color: #fff;
 	}
 	
@@ -648,12 +665,13 @@
 		height: 25px
 	}
 	#app-mount .typeWindows-1za-n7:after {
-		content: "";
+		content: var(--winBarText);
 		color: rgb(255,255,255,0.5);
 		font-weight: 500;
 
 		position: absolute;
 		top: 8px;
+		align-items: center;
 		left: 43.3%;
 	}
 	#app-mount .notice-2FJMB4 {
@@ -893,10 +911,6 @@
 }
 
 
-
-
-
-
-
-
-
+.counter-uAzbKp {
+	color: var(--context-color)!important;
+}
